# rpg

./: .gitignore  CMakeLists.txt  README.md
blender/: ground.blend  ground.blend1
blender_python/: animator.py
include/: Collision.h  Component.h  ECS.h  IndexBuffer.h  InputManager.h  Macro.h  Mesh.h  Render.h  Shaders.h  TestECS.h  Types.h  Utility.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
notes/: collision_physics_system.txt  notes.txt  todo.txt
python/: test.ipynb
shaders/: basic.frag  basic.vert  fog.frag  fog.vert  particle.frag  particle.geom  particle.vert  snow.frag  snow.geom  snow.vert  trajectory.frag  trajectory.geom  trajectory.vert  wireframe.frag  wireframe.vert
shaders/debug_depth/: debug_depth.frag  debug_depth.vert
shaders/digital_grid/: digital_grid.frag  digital_grid.vert
shaders/effect_sphere/: effect_sphere.frag  effect_sphere.vert
shaders/shooting_range/: shooting_range.frag  shooting_range.geom  shooting_range.vert
src/: Collision.cpp  ECS.cpp  IndexBuffer.cpp  InputManager.cpp  Mesh.cpp  Shaders.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  main.cpp  stb_image_impl.cpp
